--- a/webroot/css/back/styles.css
+++ b/webroot/css/back/styles.css
@@ -1749,6 +1749,9 @@ div.container_profil .checkbonito:checked ~ label::before {
 }
 
 /*----------  Emails  ----------*/
+.container_emails {
+  overflow-x: hidden !important;
+}
 .container_emails h2 {
   color: #444;
 }
@@ -1758,17 +1761,20 @@ div.container_profil .checkbonito:checked ~ label::before {
   height: 150px;
 }
 .container_emails .email {
+  background: url("http://via.placeholder.com/150x150");
+  background-attachment: scroll;
+  background-size: 100%;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.container_emails .email, .container_emails .sortable_placeholder_email_list {
   width: 150px;
   min-width: 150px;
   height: 150px;
+  position: relative;
   -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-  -moz-transition: box-shadow 0.3s ease 0s;
-  -o-transition: box-shadow 0.3s ease 0s;
-  -webkit-transition: box-shadow 0.3s ease;
-  -webkit-transition-delay: 0s;
-  transition: box-shadow 0.3s ease 0s;
   margin-right: 15px;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -1776,10 +1782,53 @@ div.container_profil .checkbonito:checked ~ label::before {
   border: 1px solid rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
-.container_emails .email:hover {
+.container_emails .email:hover, .container_emails .sortable_placeholder_email_list:hover {
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
+}
+.container_emails .email.ui-sortable-helper, .container_emails .sortable_placeholder_email_list.ui-sortable-helper {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.container_emails .email div.toolbox_email, .container_emails .sortable_placeholder_email_list div.toolbox_email {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  height: 100%;
+  width: 100%;
+}
+.container_emails .email div.toolbox_email i, .container_emails .sortable_placeholder_email_list div.toolbox_email i {
+  text-align: center;
+  font-size: 20px;
+  display: block;
+  margin: 0 10px;
+  height: 30px;
+  line-height: 30px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: #0676B2;
+  filter: progid:DXImageTransform.Microsoft.Alpha(enabled=false);
+  opacity: 1;
+  -moz-transition: opacity 0.3s ease 0s;
+  -o-transition: opacity 0.3s ease 0s;
+  -webkit-transition: opacity 0.3s ease;
+  -webkit-transition-delay: 0s;
+  transition: opacity 0.3s ease 0s;
+}
+.container_emails .email div.toolbox_email i:hover, .container_emails .sortable_placeholder_email_list div.toolbox_email i:hover {
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);
+  opacity: 0.8;
+}
+.container_emails .sortable_placeholder_email_list {
+  background-color: #f0f0f0;
 }
 .container_emails div.add_section {
   background-color: #FF3B49;
