--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -893,8 +893,11 @@ div.list_template {
 
         li div.col_template_thumbs { margin-right: 15px; img { display: block; } }
         li div.col_template_descr  {
-            & > p.title_row {
+            & > p {
                 span {
+                    word-break: keep-all!important;
+                    height: 22px;
+                    overflow: hidden;
                     font-size: 21px;
                     color: $secondaryColor;
                     font-family: 'bariolbold', 'Helvetica';
@@ -1216,9 +1219,29 @@ div.container_profil { overflow-y: scroll!important;
 
 .container_emails { overflow-x: hidden!important;
 
-    h2 { color: $primaryTextColor; }
+    .pannel_title {
+        span {
+            word-break: keep-all!important;
+            height: 22px;
+            overflow: hidden;
+            font-size: 21px;
+            color: $secondaryColor;
+            font-family: 'bariolbold', 'Helvetica';
+            @include inline-block(middle);
+        }
+
+        i {
+            @include noselect();
+            @include inline-block(middle);
+            font-size: 20px;
+            color: $primaryTextColor;
+            cursor: pointer; 
+        }
+    }
 
     .emails_list { padding: 15px 0; overflow-x: hidden; height: 150px; }
+
+
 
     .email { @include back(url("http://via.placeholder.com/150x150"), scroll, 100%, center, no-repeat); }
     .email, .sortable_placeholder_email_list  {
@@ -1231,6 +1254,7 @@ div.container_profil { overflow-y: scroll!important;
         @include box-sizing(border-box);
         border: $primaryBorder;
         cursor: pointer;
+        @include single-transition(box-shadow, 0.3s, ease, 0s);
         &:hover { @include box-shadow($shadow1); }
 
         &.ui-sortable-helper { @include noselect(); }
@@ -1238,9 +1262,10 @@ div.container_profil { overflow-y: scroll!important;
         div.toolbox_email {
             position: absolute;
             top: 0; bottom: 0; left: 0; right: 0;
-            background-color: rgbaExpress(black, 0.2);
+            background-color: transparent;
             height: 100%;
             width: 100%;
+            &.active { background-color: rgbaExpress(black, 0.2); }
             i { 
                 text-align: center;
                 font-size: 20px;
@@ -1261,7 +1286,7 @@ div.container_profil { overflow-y: scroll!important;
 
     div.add_section {
         background-color: $secondaryColor;
-        height: 100px;
+        height: 70px;
         @include box-shadow($shadow0);
         @include border-radius(3px);
 
@@ -1270,7 +1295,7 @@ div.container_profil { overflow-y: scroll!important;
             height: 100%; 
             position: relative;
             @include transform-style(preserve-3d);
-            @include single-transition(transform, 0.3s, ease, 0s);
+            @include single-transition(transform, 0.5s, ease, 0s);
 
             &.active { @include rotateX(-180deg); }
         }
@@ -1287,7 +1312,7 @@ div.container_profil { overflow-y: scroll!important;
             width: 100%; 
             height: inherit;
             & > p { 
-                font-size: 25px;
+                font-size: 22px;
                 font-weight: 600;
                 color: #fff;
                 @include noselect();
@@ -1333,15 +1358,14 @@ div.container_profil { overflow-y: scroll!important;
                 }
 
                 & > button {
-                    height: 32px;
+                    height: 22px;
                     background-color: #fff;
                     color: $secondaryColor;
                     min-width: 80px;
                     font-weight: 600;
                     text-transform: uppercase;
                     margin-bottom: 0;
-                    font-size: 15px;
-                    letter-spacing: 1px;
+                    font-size: 14px;
                 }
             }
         }
