not finish delete categorie

--- a/webroot/scss/styles.scss
+++ b/webroot/scss/styles.scss
@@ -1374,740 +1374,22 @@ div.container_profil { overflow-y: scroll!important;
             }
         }
     }
-}
 
-/*----------  Popup Default  ----------*/
+    div.popup_mc > div.popup_container {
 
-.popup-overlay{
-    width:100%;
-    height:100%;
-    display:inline-block;
-    z-index: 50;
-    top: 0; left: 0;
-    background-color: rgbaExpress(black, 0.9);
-}
-
-.popup-container,
-.popup-overlay {
-    @include single-transition(none, 0.6s, ease-in, 0s);
-    @include transition-property(opacity, visibility);
-    width: 100%;
-    @include opacity(0);
-    visibility:hidden;
-    position:fixed;
-    padding: 0;
-    overflow: hidden;
-}
-
-.popup-container {
-    -webkit-font-smoothing: antialiased;
-    font-family: 'bariolregular', 'Helvetica';
-    text-align: center;
-    color:#666;
-    left:50%; top: 50%;
-    z-index: 51;
-    @include translate(-50%, -50%);
-    margin-top: 27.5px;
-    height: auto;
-    background-color: transparent;
-
-    // Order's page
-    &.commande { max-width: 600px; position: absolute; }
-    // Template's page [creat]
-    &.creat_template { max-width: 750px; }
-    // Template's page [see]
-    &.template_email {
-        padding-top: 66px;
-        padding-bottom: 66px;
-        background-color: rgba(0,0,0,0.9);
-        height: 100%!important;
-        overflow-y: scroll;
-
-        .see_email_template_block {
-            background-color: #fff;
-            margin: 66px 0;
-            width: 600px;
-            position: relative;
-            left: 50%;
-            @include translateX(-50%);
-            z-index: 51;
-        }
-    }
-}
-
-.popup-container {
-    background-color: #fff;
-
-    & > header,
-    & > form,
-    footer {
-        width: 100%;
-    }
-
-    & > header { 
-        background: $primaryColor;
-        height: 130px; 
-
-        h1 {
-            color: #fff;
-            margin: 0;
+        div.content_block {
             text-align: center;
-            padding: 0;
-            line-height: 130px;
-            font-size: 28px;
-            text-transform: uppercase;
-        }
-    }
-
-    & > form {
-
-        p, label, input, textarea {
-            color: #666;
-            font-size: 16px;
-            margin: 0;
-            @include box-sizing(border-box);
-            position: relative;
-            border: 0;
+            height: 100px;
         }
 
-        label {
-            width: 100%;
-        }
-
-        input, textarea {
-            outline: 0;
-            width: 100%;
-            font-family: 'roboto';
-            border-bottom: 1px solid #999999;
-            padding: 12px 0px;
-            font-size: 14px;
-            resize: none;
-            &:-webkit-autofill { -webkit-box-shadow: 0 0 0 1000px #fff inset; }
-            &:focus, &:valid { color: #444; }
-        }
-
-        textarea {
-            &::-webkit-scrollbar { width: 9px; }
-
-            &::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); @include border-radius(50px); }
-
-            &::-webkit-scrollbar-thumb { border-radius: 50px; background: adjust-lightness(#444, 40); }
-        }
-    }
-
-     div.field {
-        @include flex(row nowrap, flex-start, center);
-        width: 100%;
-        padding: 24px 20px;
-        border-bottom: 1px solid rgba(0,0,0,0.3);
-        @include box-sizing(border-box);
-
-        p { margin: 0; width: 100%; }
-
-        .aside {
-            width: 50%;
-            height: 100%;
-            @include flex(row wrap, center, center);
-            text-align: left;
-
-            &.oneside p, &.oneside label { margin:0; }
-        }
-    }
-
-    footer { 
-        text-align: center;
-        height: 130px;
-        @include flex(column nowrap, center, center);
-        max-height: 80px;
-        @include single-transition(max-height, 0.3s, ease-in-out, 0s);
-
-        p { margin: 0; }
-
-        &.confirmation { 
-            max-height: 130px; 
-
-            &.endTakingCharge {
-                p { margin-bottom: 16px; }
-            }
-        }
-
-        &.test_template {
-            a {
-                color: #444;
-            }
-            a:first-child{
-                color: #B71C1C; 
-                margin: 10px 0;
-                font-size: 17px;
-                text-decoration: none;
-                cursor: pointer;
-                &:hover {
-                    text-decoration: underline;
-                }
-            }
-            a:last-child {
-                @include opacity(0.8);
-                font-size: 15px
-            }
-        }
-    }
-}
-
-/* Loader Update commande */
-
-$loader-size: 20px;
-$spacing: 30px;
-
-.loader_popup {
-   height: $loader-size;
-   width: $loader-size;
-   display: inline-block;
-   position: relative;
-   background: transparant;
-   @include border-radius(0);
-
-    &:after, &::before {
-        content: '';
-        @include animation(updown 1s ease-in-out 0s infinite normal);
-    }
-
-    &:before { left: $spacing; @include animation-delay(0s); }
-
-    &:after { right: $spacing; @include animation-delay(0.66s); }
-
-    &:after,
-    &:before,
-    & > span {
-        background-color: rgbaExpress(black, 0.5);
-        position: absolute;
-        height: $loader-size;
-        width: $loader-size;
-    }
-    
-    & > span {
-        left: 0;
-        @include animation(updown 1s ease-in-out 0.33s infinite normal);
-    }
-
-    @include keyframes(updown) {
-        0%, 100% { @include translateY(0%); }
-        50% { @include translateY(-80%); }
-    }
-}
-
-span.label {
-    display: inline;
-    padding: .2em .6em .3em;
-    font-size: 75%;
-    font-weight: 700;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    border-radius: .25em;
-    text-transform: uppercase;
-    
-    &.statut0 { background-color: #777; }
-    &.statut1 { background-color: #f0ad4e; }
-    &.statut2 { background-color: #009688; }
-    &.statut3 { background-color: #5cb85c; }
-}
-
-/*====================================
-=            Email's page            =
-====================================*/
-
-// all emails
-div.emails {
-
-    div.block_rows {
-        width: 100%;
-
-        div.column_title_block {
-            max-height: 100%;
-            margin:0;
-            width: 100%;
-            background-color: #fff;
-            @include flex(column nowrap, flex-start, flex-start);
-
-            div.list { overflow: hidden; }
-        }
-    }
-}
-
-// Email cat
-div.emails {
-    div.block_rows.cat {
-        max-height: 281px;
-        overflow: hidden;
-
-        div.row_list_email {
-            @include single-transition(none, 0.5s, ease-in-out, 0s);
-            @include transition-property(max-height, overflow-y);
-            max-height: 0px;
-            overflow-y:hidden;
-        }
-
-        div.row_list_email.active { max-height: 281px; }
-        div.row_list_email.active.overflow { overflow: visible; }
-
-        div.column_title_block:hover {
-              div.modif-cat-form div.tools_action_title_box span.pencil,
-              div.modif-cat-form div.tools_action_title_box span.trash {
-                visibility: visible!important;
-                opacity: 1.0!important;
-            }
-        }
-    }
-}
-
-// top of the list
-div.title {
-    width: 100%;
-    z-index: 9999;
-    position: relative;
-    padding-bottom: 5px;
-    border-bottom: 1px solid adjust-lightness(#444, 40);
-    @include flex(row nowrap, space-between, center);
-
-    h2 { 
-        font-size: 24px; 
-        @include inline-block(middle); 
-        margin: 0; 
-        span { font-size: 19px;} 
-    }
-
-    div.action_archive {
-        @include inline-block(middle);
-        margin-left: 10px;
-
-        span.btn_act_arch{
-            @include inline-block(middle);
-            padding: 4px 9px;
-            background-color: #f0f0f0;
-            cursor: pointer;
-            color: #444;
-            font-size: 12px;
-            @include border-radius(3px);
-            border: 2px solid adjust-lightness(#444, 40);
-            font-family: 'Roboto';
-            @include single-transition(none, 0.2s, ease, 0s);
-            @include transition-property(color, background-color);
-
-            & > i, & > span { @include inline-block(middle); }
-
-            & > i { font-size: 20px; }
-
-            &:hover { background-color: $primaryColor; color: #fff; }
-            
-            &.disabled {
-                background-color: #f0f0f0;
-                color: #444;
-                @include opacity(0.6);
-                cursor: auto!important;
-            }
-        }
-    }
-
-    div.modif-cat-form {
-        @include flex(row wrap, flex-start, center);
-        width: 100%;
-        z-index: 999;
-
-        input, h2 {
-            border: 0;
-            outline: none;
-            font-size: 24px;
-            display: none;
-            color: #444;
-            font-family: 'Helvetica';
-        }
-
-        & > input { color: adjust-lightness(#444, 5); }
-
-        & > input.active, & > h2.active { @include inline-block(middle); }
-
-        & > div.tools_action_title_box {
-            position: relative;
-            @include flex(row wrap, flex-start, center);
-            height: 50px;
-
-            span.tools_action_title_btn {
-                @include inline-block(middle);
-                position: absolute;
-                top: 50%;
-                margin-top: 2px;
-                left: 10px;
-                @include translateY(-50%);
-
-                &.pencil, &.trash { visibility: hidden; @include opacity(0); }
-
-                &:last-of-type { left: 35px; }
-
-
-                i {
-                    color: $primaryColor!important;
-                    cursor: pointer;
-                    font-size: 19px;
-                    @include opacity(0.8);
-
-                    &:hover { @include opacity(1); }
-                }
-            }
-
-            p.confirmation_delete_cat {
-                @include inline-block(middle);
-                margin: 0;
-                padding-left: 5px;
-
-                a {
-                    padding: 4px 9px;
-                    background-color: #f0f0f0;
-                    cursor: pointer;
-                    color: #444;
-                    text-decoration: none;
-                    font-size: 11px;
-                    @include border-radius(3px);
-                    border: 2px solid adjust-lightness(#444, 40);
-                    font-family: Roboto;
-                    @include single-transition(none, 0.2s, ease, 0s);
-                    @include transition-property(color, background-color);
-
-                    &:hover { background-color: $primaryColor; color: #fff; }
-                }
-            }
-        }
-    }
-
-    span.accordeon {
-        background-color: #F0F0F0;
-        @include border-radius(50%);
-        padding: 20px;
-        cursor: pointer;
-        right: 5px;
-        position: relative;
-        @include single-transition(transform, 0.3s, linear, 0s);
-
-        &.active { @include rotate(180deg); }
-
-        i {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            @include translate(-50%, -50%);
-            font-size: 22px;
-        }
-    }
-
-    a.link_archive {
-        color: adjust-saturation($primaryColor, 2);
-        font-size: 15px;
-        text-decoration: none;
-        font-weight: bold;
-        padding: 5px 10px;
-        background-color: #f0f0f0;
-        cursor: pointer;
-        @include opacity(0.8);
-        @include border-radius(4px);
-
-        &:hover {
-            @include opacity(1.0);
-        }
-    }
-}
-
-// Row email list
-div.row_list_email {
-    margin: 15px 0px;
-    @include box-sizing(border-box);
-    height: 100%;
-    width: 100%;
-    position: relative;
-    @include flex(row nowrap, flex-start, center);
-
-    &.archives {
-        @include flex-wrap(wrap);
-        & > div.block {
-            cursor: auto!important;
-        }
-    }
-
-    span.arrow {
-        height: 195px;
-        width: 10%;
-        max-width: 40px;
-        text-align: center;
-        i {
-            position: absolute;
-            top: 50%;
-            margin-left: -15px;
-            @include translateY(-50%); 
-            font-size: 40px; 
-            @include box-sizing(border-box);
-            color: #444; 
+        footer > span {
+            color: $primaryTextColor;
+            text-decoration: underline;
+            padding: 10px;
             cursor: pointer;
         }
     }
 }
-
-// Email's list
-div.list {
-    width: 90%;
-    position: relative;
-    margin: 0 auto;
-    height: 195px;
-
-    div.overflow.sortable {
-        width: 100%;
-        height: 100%;
-        @include flex(row nowrap, flex-start, flex-start);
-        position: relative;
-        top: 0; bottom: 0;
-        right: 0; left: 0;
-        @include single-transition(left, 0.3s, cubic-bezier(0,0,0.58,1), 0s);
-    }
-}
-
-// One Email
-div.block.email_block {
-    height: 175px;
-    margin: 10px;
-    width: 175px;
-    overflow: hidden;
-    min-width:175px;
-    position: relative;
-    cursor: move;
-    z-index: 999;
-    @include opacity(1.0);
-    @include box-shadow($shadow0);
-    border: 1px solid #9E9E9E;
-    @include single-transition(none, 0.2s, linear, 0s);
-    @include transition-property(transform, box-shadow, opacity);
-
-    &.arch { @include opacity(0.5); }
-
-    &.active { @include opacity(1.0);}
-    &.active > div.check_div > span.checkbox {
-        background-color: #fff;
-        border: 2px solid #2489C5;
-        height: 28px;
-        width: 28px;
-        position: relative;
-
-        &::after {
-            position: absolute;
-            content: '';
-            height: 10px;
-            width: 5px;
-            left: 8px;
-            top: 2.5px;
-            @include rotate(45deg);
-            border:3px solid transparent;
-            border-right-color: #2489C5;
-            border-bottom-color: #2489C5;
-            display: inline-block;
-        }
-    }
-
-    &.disapear { @include scale(0); }
-
-    > img, 
-    > p, 
-    > .overlay  {
-        position: absolute;
-        width: 100%;
-        text-align: center;
-        margin:0;
-    }
-
-    > div.check_div {
-        height: 30px;
-        width: 30px;
-        position: absolute;
-        top:4px; right: 5px;
-
-        > span.checkbox {
-            display: block;
-            height: 28px;
-            width: 28px;
-            z-index: 99;
-            position: relative;
-            border: 2px solid #f0f0f0;
-            background-color: rgbaExpress(white, 0.2);
-            @include border-radius(50%);
-            cursor: pointer;
-            @include single-transition(all, 0.1s, linear, 0s);
-
-
-            &.nocheck:hover { border: 2px solid #2489C5; height: 27px; width: 27px; }
-        }
-    }
-
-    > img, > .overlay { height: 100% ;}
-
-    div.overlay {
-        z-index: 1;
-        background-color: rgbaExpress(white, 0.8);
-        visibility: hidden;
-        @include opacity(0);
-        @include single-transition(none, 0.4s, linear, 0s);
-        @include transition-property(visibility, opacity);
-    }
-
-    p { z-index: 2; bottom: 10px; }
-
-    div.tools_block {
-        height: 40px;
-        position: absolute;
-        margin-top: -20px;
-        top: 50%;
-        transform: translateX(-50%);
-        left: 0%;
-        @include opacity(0);
-        @include single-transition(none, 0.2s, linear, 0.1s);
-        @include transition-property(left, opacity);
-        z-index: 3;
-        @include flex(row nowrap, flex-start, center);
-
-        i {
-            font-size: 26px;
-            margin: 5px;
-            cursor: pointer;
-            @include inline-block(middle);
-            color: #444;
-
-            &:hover { color: adjust-lightness(#444, 15); }
-        }
-
-        span.tools_delete {
-            color: #fff;
-            padding: 5px 0px;
-            width: 70px;
-            cursor: pointer;
-            margin: 2px;
-            @include opacity(0);
-            text-align: center;
-            display: inline-block;
-            background-color: #444;
-            @include single-transition(background-color, 0.2s, ease, 0s);
-
-            &:hover {
-                background-color: adjust-lightness(#444, 20);
-            }
-        }
-    }
-
-    &:hover {
-        @include box-shadow($shadow1);
-        div.tools_block { left: 50%; @include opacity(1.0);}
-        // div.overlay { visibility: visible; opacity: 1.0; }  
-    }
-}
-
-div.block_rows.add_section {
-    text-align: center; 
-    height: 100px; 
-    font-size: 18px;
-    margin: 20px 0px;
-    position: relative;
-    left: -15px;
-    width: 100%;
-
-    div.flipper {
-        width: calc(100% + 30px)!important;
-        height: 100%;
-        @include single-transition(transform, 0.3s, ease, 0s);
-        position: relative;
-        @include transform-style(preserve-3d);
-
-        div.front, 
-        div.back {
-            @include backface-visibility(hidden);
-            position: absolute;
-            top: 0; bottom: 0;
-            left: 0; right: 0;
-            height: 100%;
-            width: 100%;
-            background-color: #f0f0f0;
-            border-top: 1px solid transparent;
-            border-bottom: 1px solid transparent;
-            border-color: rgba(0,0,0,0.3);
-        }
-
-        div.front {
-            z-index: 0;
-
-            .span_add {
-                font-size: 25px;
-                color: $primaryColor;
-                @include inline-block(middle);
-                cursor: pointer;
-                line-height: 100px;
-            }
-        }
-
-        div.back {
-            @include rotateX(180deg, 0);
-            @include flex(row wrap, center, center);
-
-            div {
-                height: 100%;
-                width: 100%;
-                position: relative;
-                @include inline-block(middle);
-            }
-
-            form {
-                position: absolute;
-                top: 50%;
-                left: 50%;
-                @include translate(-50%, -50%);
-
-                input {
-                    padding: 6px;
-                    text-transform: uppercase;
-                    font-size: 15px;
-                    border: 1px solid #fff;
-                    outline: none;
-                    @include border-radius(3px);
-                }
-
-                input[type=submit] {
-                    background-color: $primaryColor;
-                    color: #f0f0f0;
-                    cursor: pointer;
-                }
-                input[type=text] {
-                    background-color: #fff;
-                    color: #444;
-                    text-transform: none;
-                    &:focus {
-                        border-color: adjust-lightness($primaryColor, 5);
-                    }
-                }
-            }
-        }
-        span.cancel_flip {
-            right: 10px;
-            top: 10px;
-            height: 40px;
-            width: 40px;
-            position: relative;
-            background-color: #fff;
-            @include border-radius(50%);
-            @include box-sizing(border-box);
-            text-align: center;
-            border: 1px solid rgba(0,0,0,0.3);
-            cursor: pointer;
-            position: absolute;
-
-            i { line-height: 40px; font-size: 18px; color: $primaryColor; }
-        }
-    }
-}
-
-/*=====  End of Email's page  ======*/
 
 /*============================================
 =            Email builder's page            =
